# jsonToBatProject

./: .astylerc  .gitignore  CMakeLists.txt  Doxyfile  MinGW.bat  README.md  README_8md.html  VSCodeMinGW.bat  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  index.html  main_8cpp.html  main_8cpp_source.html  md_README.html  navtreedata.js  onSave  pages.html  sonar-project.properties  todo.html
conf/: easylogging.conf
docs/: CNAME  index.html
html/: BatchCreator_8cpp.html  BatchCreator_8cpp__incl.map  BatchCreator_8cpp__incl.md5  BatchCreator_8cpp_source.html  BatchCreator_8hpp.html  BatchCreator_8hpp.js  BatchCreator_8hpp__dep__incl.map  BatchCreator_8hpp__dep__incl.md5  BatchCreator_8hpp__incl.map  BatchCreator_8hpp__incl.md5  BatchCreator_8hpp_source.html  CliHandler_8cpp.html  CliHandler_8cpp__incl.map  CliHandler_8cpp__incl.md5  CliHandler_8cpp_source.html  CliHandler_8hpp.html  CliHandler_8hpp.js  CliHandler_8hpp__dep__incl.map  CliHandler_8hpp__dep__incl.md5  CliHandler_8hpp__incl.map  CliHandler_8hpp__incl.md5  CliHandler_8hpp_source.html  JSONData_8cpp.html  JSONData_8cpp__incl.map  JSONData_8cpp__incl.md5  JSONData_8cpp_source.html  JSONData_8hpp.html  JSONData_8hpp.js  JSONData_8hpp__dep__incl.map  JSONData_8hpp__dep__incl.md5  JSONData_8hpp__incl.map  JSONData_8hpp__incl.md5  JSONData_8hpp_source.html  JSONHandler_8cpp.html  JSONHandler_8cpp__incl.map  JSONHandler_8cpp__incl.md5  JSONHandler_8cpp_source.html  JSONHandler_8hpp.html  JSONHandler_8hpp.js  JSONHandler_8hpp__dep__incl.map  (+442 more)
latex/: BatchCreator_8cpp.tex  BatchCreator_8cpp__incl.md5  BatchCreator_8cpp_source.tex  BatchCreator_8hpp.tex  BatchCreator_8hpp__dep__incl.md5  BatchCreator_8hpp__incl.md5  BatchCreator_8hpp_source.tex  CliHandler_8cpp.tex  CliHandler_8cpp__incl.md5  CliHandler_8cpp_source.tex  CliHandler_8hpp.tex  CliHandler_8hpp__dep__incl.md5  CliHandler_8hpp__incl.md5  CliHandler_8hpp_source.tex  JSONData_8cpp.tex  JSONData_8cpp__incl.md5  JSONData_8cpp_source.tex  JSONData_8hpp.tex  JSONData_8hpp__dep__incl.md5  JSONData_8hpp__incl.md5  JSONData_8hpp_source.tex  JSONHandler_8cpp.tex  JSONHandler_8cpp__incl.md5  JSONHandler_8cpp_source.tex  JSONHandler_8hpp.tex  JSONHandler_8hpp__dep__incl.md5  JSONHandler_8hpp__incl.md5  JSONHandler_8hpp_source.tex  LogAndOut_8cpp.tex  LogAndOut_8cpp__incl.md5  LogAndOut_8cpp_source.tex  LogAndOut_8hpp.tex  LogAndOut_8hpp__dep__incl.md5  LogAndOut_8hpp__incl.md5  LogAndOut_8hpp_source.tex  StartupHandler_8cpp.tex  StartupHandler_8cpp__incl.md5  StartupHandler_8cpp_source.tex  StartupHandler_8hpp.tex  StartupHandler_8hpp_source.tex  (+201 more)
lib/: CMakeLists.txt  xgetopt.c
logs/: log161759_26-02-2024.txt  log161805_26-02-2024.txt  log162027_26-02-2024.txt  log162047_26-02-2024.txt  log162108_26-02-2024.txt  log162219_26-02-2024.txt  log162710_26-02-2024.txt  log163137_26-02-2024.txt  log163238_26-02-2024.txt  log163531_26-02-2024.txt
output/: VSCodeMinGW.bat
rtf/: BatchCreator_8cpp__incl.md5  BatchCreator_8hpp__dep__incl.md5  BatchCreator_8hpp__incl.md5  CliHandler_8cpp__incl.md5  CliHandler_8hpp__dep__incl.md5  CliHandler_8hpp__incl.md5  JSONData_8cpp__incl.md5  JSONData_8hpp__dep__incl.md5  JSONData_8hpp__incl.md5  JSONHandler_8cpp__incl.md5  JSONHandler_8hpp__dep__incl.md5  JSONHandler_8hpp__incl.md5  LogAndOut_8cpp__incl.md5  LogAndOut_8hpp__dep__incl.md5  LogAndOut_8hpp__incl.md5  StartupHandler_8cpp__incl.md5  Verbose_8cpp__incl.md5  Verbose_8hpp__dep__incl.md5  Verbose_8hpp__incl.md5  classbatch_1_1BatchCreator_a5cc3b560ff2d71cf65afb15cd23677da_icgraph.md5  classjson_1_1JSONHandler_a06851f419487aefd2bba756a380fa17b_cgraph.md5  classjson_1_1JSONHandler_a06851f419487aefd2bba756a380fa17b_icgraph.md5  classjson_1_1JSONHandler_a0874e5bcaac5fe6788233e5102b122f8_icgraph.md5  classjson_1_1JSONHandler_a1ae1cbe7bc59d66590929c4ac5d1dfe3_icgraph.md5  classjson_1_1JSONHandler_a3ab91c34ac903ecdd6c8bbe02c9f0bd8_cgraph.md5  classjson_1_1JSONHandler_a3ab91c34ac903ecdd6c8bbe02c9f0bd8_icgraph.md5  classjson_1_1JSONHandler_a400c659faceca796918cab48b445f513_icgraph.md5  classjson_1_1JSONHandler_a521983ef6372a6563e1a4146dc8923b3_icgraph.md5  classjson_1_1JSONHandler_a641700b2c8344cdb8544e97e702c5326_icgraph.md5  classjson_1_1JSONHandler_a90f7bd04911d0e6dfe91ded17ba4edcf_cgraph.md5  classjson_1_1JSONHandler_a90f7bd04911d0e6dfe91ded17ba4edcf_icgraph.md5  classjson_1_1JSONHandler_a954ed03654cc173ee713a20ff3edc384_cgraph.md5  classjson_1_1JSONHandler_a9616285a6fe559ffb26a3a0b93912eed_icgraph.md5  classjson_1_1JSONHandler_a9bfd9f3a8aeea73dbeec1325352e5bd4_icgraph.md5  classjson_1_1JSONHandler_ab07f5a8033adce04838d46f8de0bfd8f_icgraph.md5  classjson_1_1JSONHandler_ab47cc695be5896e9fb8b468322500d5f_cgraph.md5  (+15 more)
(+333 files in other folders)
